--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
 }
 
 .navsection {
+
+    background-color: #412323;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: grid;
     justify-content: space-evenly;
     grid-template-columns: 50px 50px 50px 50px;
@@ -216,7 +222,50 @@ body {
 }
 
 
+.card {
 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin-left: 30px;
+    text-align: center;
+    font-family: arial;
+    padding: 60px;
+}
+
+.title {
+    color: grey;
+    font-size: 18px;
+}
+
+#userclientsection {
+    display: inline-flex;
+}
+
+.clientsection button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+
+
+#clientsection a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+.clientsection button:hover,
+#clientsection a:hover {
+    opacity: 0.7;
+}
 
 
 
@@ -263,6 +312,10 @@ body {
 
 .contasection {
     margin: 10px;
+}
+
+#contactemailicon {
+    padding-right: 10px;
 }
 
 .animation {
