--- a/style.css
+++ b/style.css
@@ -309,6 +309,18 @@ body {
 
 
 /* Contact */
+.animation {
+    margin-top: 10px;
+    color: rgb(11, 121, 97);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+    background-color: #151515;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+
+}
 
 .contasection {
     margin: 10px;
@@ -318,16 +330,16 @@ body {
     padding-right: 10px;
 }
 
-.animation {
-    margin-top: 10px;
-    color: rgb(11, 121, 97);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100vh;
-    background-color: #151515;
-
+.contactsection1 {
+    margin-left: 10px;
+    padding-left: 15px;
 }
+
+.contactsection2 {
+    padding-right: 20px;
+}
+
+
 
 .circle1 {
     display: flex;
@@ -354,7 +366,7 @@ body {
 }
 
 #contarticlenth {
-    height: 140px;
+    height: 100px;
 }
 
 @keyframes ani {
