--- a/style.css
+++ b/style.css
@@ -69,18 +69,15 @@ body {
 .section2 {
     font-size: x-large;
     background-color: #5f3c3c;
-    height: 320px;
-    margin: 30px 40px;
-    padding: 10px;
+    margin: 40px;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
 }
 
 .section2 img {
-    width: 300px;
-    height: 300px;
-    margin: 15px 10px;
-    float: right;
-
+    width: 75%;
 }
 
 .button {
@@ -105,20 +102,17 @@ body {
 
 .section3 {
     font-size: x-large;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 40px;
-    margin-right: 40px;
 
-    display: flex;
+    margin: 40px;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     background-color: rgba(31, 4, 30, 0.767);
 
 }
 
-.section3 div img {
-    width: 300px;
-    height: 300px;
-    margin: 15px 10px;
+.section3 img {
+    width: 75%;
 }
 
 .footer {
@@ -186,9 +180,10 @@ body {
 
 .aboutsection1 {
     border: 2px solid red;
-    display: flex;
-    margin: 10px 60px;
-    padding: 20px 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 50px;
+    padding: 25px;
 }
 
 .section1details {
@@ -238,7 +233,8 @@ body {
 }
 
 #userclientsection {
-    display: inline-flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .clientsection button {
@@ -312,13 +308,13 @@ body {
 .animation {
     margin-top: 10px;
     color: rgb(11, 121, 97);
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-content: space-between;
     height: 100vh;
     background-color: #151515;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+
 
 }
 
@@ -379,10 +375,42 @@ body {
     }
 }
 
-/* @media (min-width: 300px) and (max-width: 1024px) {
-    * {}
+@media (min-width: 300px) and (max-width: 1024px) {
+    .section2 {
+        display: inline-block;
+    }
+
+    .section2 img {
+        margin-top: 10px;
+    }
+
+    .section3 {
+        display: inline-block;
+    }
+
+    .aboutsection1 {
+        display: inline-block;
+        align-items: center;
+        margin-left: 10px;
+        margin-right: 0px;
+        padding-right: 0px;
+    }
+
+    .section1details {
+        padding-bottom: 10px;
+    }
+
+    #userclientsection {
+        display: inline-block;
+    }
+
+    .animation {
+        display: inline-block;
+        background-color: #1a1919;
+    }
+
 }
 
 @media (min-width: 1025px) {
     * {}
-} */
+}
