--- a/style.css
+++ b/style.css
@@ -37,7 +37,11 @@ body {
     background-color: rgb(207, 194, 192);
 }
 
+
+
 /* Home Page */
+
+
 .section1 {
     margin-top: 10px;
     padding-top: 250px;
@@ -364,9 +368,20 @@ body {
 
 /* Responsive for Pc vs Phone */
 @media (min-width: 300px) and (max-width: 1024px) {
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+
     .navigation {
+        padding: 10px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+    }
+
+    .navigation a:hover {
+        width: 80%;
+        background-color: rgb(207, 194, 192);
     }
 
     .section1 {
@@ -432,9 +447,10 @@ body {
     .contactanimation {
         display: inline-block;
         margin: 20px;
-        padding: 30px;
-
+        padding: 10px;
+        width: 100%;
         text-align: center;
+        background-size: 85%;
 
     }
 
@@ -443,6 +459,33 @@ body {
 
 
     }
+
+    .photoarticle {
+        margin-top: 20px;
+        padding-top: 30px;
+    }
+
+    .photosection1 {
+        display: inline-block;
+    }
 }
 
 @media (min-width: 1025px) {}
+
+.photoarticle {
+    padding-top: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+}
+
+.photosection1 img {
+    border: 3px solid red;
+    margin: 10px 40px;
+    width: 50%;
+}
+
+.photosection1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
