--- a/style.css
+++ b/style.css
@@ -133,6 +133,24 @@ body {
 
 }
 
+.photoarticle {
+    padding-top: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+}
+
+.photosection1 img {
+    border: 3px solid red;
+    margin: 10px 40px;
+    width: 50%;
+}
+
+.photosection1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .contactsection1 {
     font-size: 20px;
 }
@@ -374,9 +392,17 @@ body {
     }
 
     .navigation {
-        padding: 10px;
+        padding: 20px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+    }
+
+    .navsection a {
+        font-weight: bold;
+        letter-spacing: normal;
+        color: #fff;
+        font-size: 30px;
+        text-decoration: none;
     }
 
     .navigation a:hover {
@@ -471,21 +497,3 @@ body {
 }
 
 @media (min-width: 1025px) {}
-
-.photoarticle {
-    padding-top: 30px;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 40px;
-}
-
-.photosection1 img {
-    border: 3px solid red;
-    margin: 10px 40px;
-    width: 50%;
-}
-
-.photosection1 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
