--- a/owner.css
+++ b/owner.css
@@ -111,7 +111,8 @@
 }
 
 .body {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     margin-top: 30px;
     word-spacing: 5px;
 }
@@ -162,4 +163,10 @@
     padding-bottom: 20px;
     margin-top: 30px;
     background-color: rgb(77, 80, 72);
+}
+
+@media (min-width: 300px) and (max-width: 1024px) {
+    .body {
+        display: inline-block;
+    }
 }
