--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
 /* Navigation Section for all Page */
 
 
+
 .navigation {
+
     background-color: rgb(184, 182, 194);
 }
 
@@ -19,13 +21,22 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    height: 10%;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
 
 }
 
+.navsection img {
+    width: 30%;
+    height: 80%;
+    padding-top: 10px;
+}
+
 .navsection a {
+    margin-top: 30px;
+
     font-weight: bold;
     color: #fff;
     font-size: 30px;
@@ -33,7 +44,9 @@ body {
 }
 
 .navigation a:hover {
-    width: 30%;
+    width: 45%;
+
+
     background-color: rgb(207, 194, 192);
 }
 
@@ -51,11 +64,12 @@ body {
     padding-top: 250px;
     color: #fff;
     text-align: center;
-    background-image: url('./img/IMG-20231026-WA0017.jpg');
+    background-image: url('./img/IMG-20231026-WA0011.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 400px;
+
 }
 
 .section1 h1 {
@@ -124,60 +138,28 @@ body {
 }
 
 /* About */
+.mainaboutsection {
+    margin-top: 50px;
+    padding-top: 10px;
+}
+
 .aboutsection1 {
-    background-image: url("img/IMG-20231026-WA0011.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 600px;
-    width: 100%;
     margin-top: 10px;
+    background-image: url("img/IMG-20231026-WA0017.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
     border: 2px solid rgba(18, 18, 19, 0.041);
 
 
 }
 
-.photoarticle {
-    padding-top: 30px;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 40px;
-}
-
-.photosection1 img {
-    border: 3px solid red;
-    margin: 10px 40px;
-    width: 50%;
-}
-
-.photosection1 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.contactsection1 {
-    font-size: 20px;
-}
-
-.contbtn {
-    border-radius: 4px;
-    background-color: #f4511e;
-    border: none;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-}
-
-
 .aboutnavigation {
     font-size: xx-large;
-    margin-top: 380PX;
-    margin-left: 60px;
+    margin-top: 100px;
+    margin-left: 30px;
     color: antiquewhite;
 
 
@@ -204,6 +186,54 @@ body {
     border-radius: 5px;
     height: 25px;
 }
+
+/* Photo */
+.photoarticle {
+    margin-top: 40px;
+    padding-top: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+}
+
+.photosection1 img {
+
+    margin: 10px 40px;
+    width: 50%;
+}
+
+.photosection1 {
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.photodetails {
+
+    margin: 10px;
+    padding: 20px;
+    font-size: x-large;
+}
+
+.contactsection1 {
+    font-size: 20px;
+}
+
+.contbtn {
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+
 
 .section1details button {
     margin-top: 40px;
@@ -284,7 +314,7 @@ body {
 /* Location Page*/
 .locasection1 {
     display: block;
-    margin: 20px;
+    margin-top: 40px;
     padding: 30px;
     background-image: url('./img/IMG-20231026-WA0020.jpg');
     background-size: cover;
@@ -318,7 +348,8 @@ body {
 
 /* Contact Page */
 .contactanimation {
-    padding-top: 20px;
+    margin-top: 80px;
+    padding-top: 40px;
     color: rgb(11, 121, 97);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -398,22 +429,47 @@ body {
 
     }
 
+
     .navigation {
         padding: 20px;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(6, 1fr);
+    }
+
+    .navsection {
+
+        background-color: #412323;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 20%;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
+    }
+
+    .navsection img {
+        padding-top: 0px;
+        width: 60%;
+        height: 80%;
     }
 
     .navsection a {
+        display: inline;
         font-weight: bold;
-        letter-spacing: normal;
+
         color: #fff;
-        font-size: 30px;
+        font-size: 15px;
         text-decoration: none;
+        padding: 10px;
+        margin: 0px;
+
     }
 
     .navigation a:hover {
-        width: 80%;
+        width: 60%;
+        height: 40%;
         background-color: rgb(207, 194, 192);
     }
 
@@ -485,22 +541,24 @@ body {
 
     .contactanimation {
         display: inline-block;
-        margin: 20px;
-        padding: 10px;
         width: 100%;
         text-align: center;
-        background-size: 85%;
+
+
+
 
     }
 
     .contactsection2 {
-        margin: 60px;
-
+        margin: 20px;
+        padding: 50px;
 
     }
 
+
+    /* Photo Page */
     .photoarticle {
-        margin-top: 20px;
+        margin-top: 30px;
         padding-top: 30px;
     }
 
@@ -510,3 +568,60 @@ body {
 }
 
 @media (min-width: 1025px) {}
+
+.sectionbody {
+    font-family: Arial, sans-serif;
+    background-color: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.login-container {
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border-radius: 8px;
+    width: 350px;
+    padding: 20px;
+}
+
+.login-box h2 {
+    font-size: 24px;
+    margin: 0;
+    padding-bottom: 20px;
+}
+
+.form-group {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    font-size: 14px;
+    display: block;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+
+
+.forgot-password {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 14px;
+    color: #1877f2;
+    cursor: pointer;
+}
+
+.forgot-password:hover {
+    text-decoration: underline;
+}
