--- a/style.css
+++ b/style.css
@@ -431,7 +431,6 @@ body {
 
 
     .navigation {
-        padding: 20px;
         display: grid;
         grid-template-columns: repeat(6, 1fr);
     }
@@ -443,7 +442,7 @@ body {
         top: 0;
         left: 0;
         width: 100%;
-        height: 20%;
+
         display: grid;
         grid-template-columns: repeat(6, 1fr);
 
@@ -473,14 +472,15 @@ body {
         background-color: rgb(207, 194, 192);
     }
 
-    .mainhomesection,
+
     .mainaboutsection {
+        margin-top: 60px;
         width: 100%;
         justify-content: space-between;
     }
 
     .section1 {
-        margin-top: 2px;
+        margin-top: 50px;
         padding-top: 30px;
     }
 
@@ -527,6 +527,10 @@ body {
 
     }
 
+    .locasection1 {
+        margin-top: 90px;
+    }
+
     .location {
         background-size: 75%;
     }
@@ -558,7 +562,7 @@ body {
 
     /* Photo Page */
     .photoarticle {
-        margin-top: 30px;
+        margin-top: 50px;
         padding-top: 30px;
     }
 
