--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     left: 0;
     width: 100%;
     height: 10%;
-    padding: 20px;
+    padding-left: 20px;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
 
@@ -32,6 +32,7 @@ body {
     width: 30%;
     height: 80%;
     padding-top: 10px;
+
 }
 
 .navsection a {
